--- a/tasks/static/main.css
+++ b/tasks/static/main.css
@@ -5,6 +5,7 @@ body {
 
 .navbar {
     background: rgb(53, 52, 52);
+    color: white;
     padding: 5px 0;
 }
 
@@ -48,4 +49,5 @@ body {
     padding: 10px;
     text-align: center;
 }
+
 
