Movies and TV Shows

--- a/primevideo/templates/movie_detail.html
+++ b/primevideo/templates/movie_detail.html
@@ -1,19 +1,24 @@
 <!-- templates/movie_detail.html -->
 <div>
     <h1>{{ movie.title }}</h1>
-    <p>{{ movie.description }}</p>
+    <p><strong>Descripción:</strong> {{ movie.description }}</p>
+    <p><strong>Director:</strong> {{ movie.director }}</p>
+    <p><strong>Géneros:</strong> {{ movie.genres.all|join:", " }}</p>
+    <p><strong>Duración:</strong> {{ movie.duration }} minutos</p>
 
     {% if request.user.is_authenticated %}
-        {% if movie.watchedcontent_set.filter(user=request.user).exists %}
-            <span>👁️ Visto</span>
-        {% else %}
-            <a href="{% url 'mark_as_watched_movie' movie_id=movie.id %}">👁️ Marcar como Visto</a>
-        {% endif %}
+        <div>
+            {% if watched %}
+                <span>👁️ Visto</span>
+            {% else %}
+                <a href="{% url 'mark_as_watched_movie' movie_id=movie.id %}">👁️ Marcar como Visto</a>
+            {% endif %}
 
-        {% if movie.favoritecontent_set.filter(user=request.user).exists %}
-            <span>⭐ Favorito</span>
-        {% else %}
-            <a href="{% url 'mark_as_favorite_movie' movie_id=movie.id %}">⭐ Marcar como Favorito</a>
-        {% endif %}
+            {% if favorite %}
+                <span>⭐ Favorito</span>
+            {% else %}
+                <a href="{% url 'mark_as_favorite_movie' movie_id=movie.id %}">⭐ Marcar como Favorito</a>
+            {% endif %}
+        </div>
     {% endif %}
 </div>
