--- a/primevideo/templates/base.html
+++ b/primevideo/templates/base.html
@@ -95,6 +95,7 @@
             margin-left: 10px;
         }
     </style>
+    {{ form.media }}
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
