--- a/primevideo/templates/movie_list.html
+++ b/primevideo/templates/movie_list.html
@@ -2,25 +2,38 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>My Movies</h1>
-    
-    {% if movies %}
-        {% for movie in movies %}
-            <div style="margin-bottom: 20px;">
-                <h2>{{ movie.title }}</h2>
-                
-                {% if movie.image %}
-                    <img src="{{ movie.image.url }}" alt="{{ movie.title }}" style="width:150px;height:auto;">
-                {% else %}
-                    <p>No image available</p>
-                {% endif %}
-                
-                <p>{{ movie.description }}</p>
-                <p>Duration: {{ movie.duration }} minutes</p>
-                <a href="{% url 'movie_detail' movie.id %}">View Details</a>
+    <div class="container">
+        <h1>My Movies</h1>
+        
+        {% if movies %}
+            <div class="row">
+                {% for movie in movies %}
+                    <div class="col-md-3 mb-4">
+                        <div class="movie-thumbnail">
+                            <a href="{% url 'movie_detail' movie.id %}">
+                                {% if movie.image %}
+                                    <img src="{{ movie.image.url }}" alt="{{ movie.title }}" class="img-fluid">
+                                {% else %}
+                                    <p>No image available</p>
+                                {% endif %}
+                                <div class="movie-title">
+                                    <h2>{{ movie.title }}</h2>
+                                </div>
+                            </a>
+                            <div class="movie-icons">
+                                {% if movie.watched %}
+                                    <span>👁️</span>
+                                {% endif %}
+                                {% if movie.favorite %}
+                                    <span>⭐</span>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
             </div>
-        {% endfor %}
-    {% else %}
-        <p>No movies found.</p>
-    {% endif %}
+        {% else %}
+            <p>No movies found.</p>
+        {% endif %}
+    </div>
 {% endblock %}
