--- a/primevideo/templates/movie_list.html
+++ b/primevideo/templates/movie_list.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <div class="container">
-        <h1>My Movies</h1>
+        <h1>Peliculas</h1>
         
         {% if movies %}
             <div class="row">
