--- a/primevideo/templates/update_profile.html
+++ b/primevideo/templates/update_profile.html
@@ -1,15 +1,14 @@
-<!-- templates/create_content.html (puede ser usado para películas o series) -->
 {% extends 'base.html' %}
 
 {% block content %}
 <main class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3 mt-5">
-            <h1 class="text-center">Create Content</h1>
-            <form method="POST" enctype="multipart/form-data">
+            <h1 class="text-center">Update Profile</h1>
+            <form method="POST">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="submit" class="btn btn-primary">Save Changes</button>
             </form>
         </div>
     </div>
