--- a/primevideo/templates/series_list.html
+++ b/primevideo/templates/series_list.html
@@ -1,30 +1,29 @@
-<!-- series_list.html -->
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container">
-        <h1>My Series</h1>
-        
-        {% if series %}
+<main class="container">
+    <div class="row">
+        <div class="col-md-12 mt-5">
+            <h1 class="text-left">Series</h1>
             <div class="row">
-                {% for series in series %}
+                {% for serie in series %}
                     <div class="col-md-3 mb-4">
                         <div class="series-thumbnail">
-                            <a href="{% url 'series_detail' series.id %}">
-                                {% if series.image %}
-                                    <img src="{{ series.image.url }}" alt="{{ series.title }}" class="img-fluid">
+                            <a href="{% url 'series_detail' serie.id %}">
+                                {% if serie.image %}
+                                    <img src="{{ serie.image.url }}" alt="{{ serie.title }}" class="img-fluid">
                                 {% else %}
                                     <p>No image available</p>
                                 {% endif %}
                                 <div class="series-title">
-                                    <h2>{{ series.title }}</h2>
+                                    <h2>{{ serie.title }}</h2>
                                 </div>
                             </a>
                             <div class="series-icons">
-                                {% if series.watched %}
+                                {% if serie.id in watched_series %}
                                     <span>👁️</span>
                                 {% endif %}
-                                {% if series.favorite %}
+                                {% if serie.id in favorite_series %}
                                     <span>⭐</span>
                                 {% endif %}
                             </div>
@@ -32,8 +31,7 @@
                     </div>
                 {% endfor %}
             </div>
-        {% else %}
-            <p>No series found.</p>
-        {% endif %}
+        </div>
     </div>
+</main>
 {% endblock %}
